--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -33,13 +33,13 @@
 \underline{\textbf{Первая глава}} посвящена %\dots
 математическим основам построения алгоритмов оценки параметров гармоник.
 
-Объектом исследования являются алгоритмы оценки параметров гармоник в силовых электрических сетях. Предметом иследования является точность и быстродействие алгоритмов оценки параметров гармоник. Мы изучаем оценку параметров гармоник на примере сигналов в электрической сети.
+Объектом исследования являются алгоритмы оценки параметров гармоник. Предметом иследования является точность и быстродействие алгоритмов оценки параметров гармоник. Мы изучаем оценку параметров гармоник на примере сигналов в электрической сети.
 
 В работе представлена математическая модель сигнала в электрической сети, обобщающая результаты исследований проблем качества электроэнергии (КЭ) и учитывающая требования регламентирующих документов. Она позволяет проводить исследования алгоритмов анализа электрических сигналов, а также средств измерений, построенных на их основе.
 Модель сигнала электрической сети связывает гармоники, высшие гармоники и интергармоники тока и напряжения электрической сети при наличии шума: 
 %ГОСТ 30804.4.7-2013 (IEC 61000-4-7:2009) Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств. 2013; Доступно по: http://docs.cntd.ru/document/1200103652
 \begin{equation}
-	\label{eq:equation6}
+	\label{eq:equation1}
 	s_{t} = a_{0} \sin (\omega_{0} t + \varphi_{0}) + \displaystyle\sum_{p=0}^{P} a_p^{\upsilon} \sin (m_p^{\upsilon} \omega_{0} t + \varphi_p^{\upsilon}) + \displaystyle\sum_{q=0}^{Q} a_q^i \sin  (\omega_q^i t + \varphi_q^{i})
 \end{equation}
 
@@ -74,7 +74,7 @@ $\eta$ – шум.
 Проблема измерения гармоник и интергармоник в электрической сети является актуальной.
 Наличие интергармоник и гармоник оказывает негативное влияние на оборудование. Из-за возникновения гармоник в электрических сетях происходит перегрев оборудования, поэтому уменьшается его срок службы. Интергармоники наблюдаются при увеличении количества нагрузок в дополнение к гармоникам.
 
-Для определения точности полученных результатов алгоритмы можно проверить с помощью неравенства Крамера-Рао. В зарубежной литературе чаще встречается термин Cramer-Rao lower bound (CRLB), что обозначает <<нижняя граница Крамера-Рао>>. 
+Точность получаемых результатов оценки параметров гармоник можно проверить с помощью неравенства Крамера-Рао. В зарубежной литературе чаще встречается термин Cramer-Rao lower bound (CRLB), что обозначает <<нижняя граница Крамера-Рао>>. 
 
 В неравенстве Крамера-Рао сигнал имеет наибольшую величину дисперсии при некоторых условиях. Если неравенство Крамера-Рао преобразуется в равенство, то оценка параметров считается наилучшей. Отсюда следует, что дисперсия данной оценки самая маленькая из возможных. Таким образом, данная оценка лучше всех остальных, и метод с такой дисперсией обладает наилучшей точностью. Несмещенная оценка, которая достигается нижней границей Крамера-Рао, называется эффективной. Такое решение обеспечивает наименьшую среднеквадратичную ошибку среди несмещенных методов и называется minimum variance unbiased (MVU)~--~<<оценкой с минимальной несмещенной дисперсией>>. Общая формула границы Крамера-Рао:
 \begin{equation}
@@ -106,7 +106,30 @@ $\eta$ – шум.
 Высокую точность оценки спектральных составляющих сигнала может
 обеспечить ЦОС, в этом случае его математической
 основой является БПФ. Однако применение ДПФ не позволяет точно оценить параметры гармоник сигнала, когда
-максимум ДПФ не совпадает с максимумом спектра. В связи с этим необходимо применять дополнительные алгоритмы. Исследованы методы оценки спектральных составляющих: метод Якобсена (Jacobsen's Modified Quadratic Estimator), два метода Квина (Quinn's Estimator, Quinn's Second Estimator), два метода Маклеода (Macleod's Estimator), метод Грэндка (Grandke's method), алгоритм параболической интерполяции (Parabolic Interpolation), алгоритм интерполяции Гаусса (Gaussian Interpolation), алгоритм, рекомендованный в ГОСТ 30804.4.7-2013, метод корреляционных функций (Correlation function method), модернизированный метод корреляционных функций (Modernized method of correlation functions).
+максимум ДПФ не совпадает с максимумом спектра. Рассмотрим формулу модели сигнала:	
+\begin{equation}
+	\label{eq:equation3}
+	s(t) = \displaystyle\sum_{k=0}^{N-1} A_k \cos \left({\frac{2 \pi}{T_s} f_{peak} t  + \varphi_k} \right)+ \eta(t)  
+\end{equation}
+
+где $A_k$ -- амплитуда;
+
+$f_{peak}$ -- частота;
+
+$\varphi_k$ -- начальная фаза;
+
+$\eta(t)$ -- шум. 
+
+Если представить аналоговый сигнал в дискретной форме, то 
+максимум гармоники сигнала $f_{peak}$ и максимум дискретных гармоник $f_k$ будут не совпадать (рисунок \ref{img:Maximum_DFT}). ДПФ можно представить в комплексной форме:
+\begin{equation}
+	\label{eq:equation4}
+	\dot{X}(n)= \displaystyle\sum_{k=0}^{N-1} x(k) \cdot \exp\left( -j \cdot \frac{2 \pi n k}{N}\right)
+\end{equation}  
+
+После Быстрого Преобразования Фурье на рисунке \ref{img:Maximum_DFT} видим дискретные гармоники $f_k-1$, $f_k$, $f_{k+1}$ и амплитудные гармоники $|X_{k-1}|$, $|X_k|$, $|X_{k+1}|$. Исследуемая математическая модель сигнала показывает соотношение между реальными гармониками и теми, которые мы получаем после использования ДПФ. 
+
+Для нахождения $f_{peak}$ исследованы методы оценки спектральных составляющих: метод Якобсена (Jacobsen's Modified Quadratic Estimator), два метода Квина (Quinn's Estimator, Quinn's Second Estimator), два метода Маклеода (Macleod's Estimator), метод Грэндка (Grandke's method), алгоритм параболической интерполяции (Parabolic Interpolation), алгоритм интерполяции Гаусса (Gaussian Interpolation), алгоритм, рекомендованный в ГОСТ 30804.4.7-2013, метод корреляционных функций (Correlation function method), модернизированный метод корреляционных функций (Modernized method of correlation functions).
 %B. G. Quinn, "Estimation of frequency, amplitude, and phase from the DFT of a time series," in IEEE Transactions on Signal Processing, vol. 45, no. 3, pp. 814-817, March 1997, doi: 10.1109/78.558515.
 % B. G. Quinn, "Estimating frequency by interpolation using Fourier coefficients," in IEEE Transactions on Signal Processing, vol. 42, no. 5, pp. 1264-1268, May 1994, doi: 10.1109/78.295186.
 % B. G. Quinn and P. J. Kootsookos, "Threshold behavior of the maximum likelihood estimator of frequency," in IEEE Transactions on Signal Processing, vol. 42, no. 11, pp. 3291-3294, Nov. 1994, doi: 10.1109/78.330402.
@@ -133,50 +156,29 @@ $\eta$ – шум.
 Алгоритмы являются интерполяционными для нахождения параметров гармоник, кроме трех последних методов (метод корреляционных функций, модернизированный метод корреляционных функций и метод по ГОСТу). Сутью метода интерполирования является нахождение промежуточных значений величины по имеющемуся дискретному набору известных значений, то есть кривая построенной функции должна точно пройти через имеющиеся точки данных.
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.35] {Maximum_DFT.pdf}
+	\includegraphics [scale=0.3] {Maximum_DFT.pdf}
 	\begin{flushright}
 		\caption{Случай несовпадения максимума ДПФ и максимума спектра гармоник.}	
 	\end{flushright}
 	\label{img:Maximum_DFT}
 \end{figure}
 
-Чтобы выявить наилучший алгоримт для оценки спектральных составляющих, рассмотрим формулу модели сигнала:	
-\begin{equation}
-	\label{eq:equation1}
-	s(t) = \displaystyle\sum_{k=0}^{N-1} A_k \cos \left({\frac{2 \pi}{T_s} f_{peak} t  + \varphi_k} \right)+ \eta(t)  
-\end{equation}
-
-где $A_k$ -- амплитуда;
-
-$f_{peak}$ -- частота;
-
-$\varphi_k$ -- начальная фаза;
-
-$\eta(t)$ -- шум. 
-
-Если представить аналоговый сигнал в дискретной форме, то 
-максимум гармоники сигнала $f_{peak}$ и максимум дискретных гармоник $f_k$ будут не совпадать (рисунок \ref{img:Maximum_DFT}). ДПФ можно представить в комплексной форме:
-\begin{equation}
-	\label{eq:equation3}
-	\dot{X}(n)= \displaystyle\sum_{k=0}^{N-1} x(k) \cdot \exp\left( -j \cdot \frac{2 \pi n k}{N}\right)
-\end{equation}  
-
-После Быстрого Преобразования Фурье на рисунке \ref{img:Maximum_DFT} видим дискретные гармоники $f_k-1$, $f_k$, $f_{k+1}$ и амплитудные гармоники $|X_{k-1}|$, $|X_k|$, $|X_{k+1}|$. Исследуемая математическая модель сигнала показывает соотношение между реальными гармониками и теми, которые мы получаем после использования ДПФ. 
 
 На рисунке \ref{img:Dispersion_in_the_estimation_of_the_fundamental_frequency_of_the_voltage} представлена зависимость дисперсии при оценке основной частоты от уровня шума. Представлены методы: граница Крамера-Рао, метод корреляционных функций, второй метод Квина, метод Маклеода (5 точек). В результате анализа выявлено, что метод корреляционных функций наиболее точен, но использует большее количество математических операций, поэтому требует большего времени на выполнение.  
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.61] {Dispersion in the estimation of the fundamental frequency of the voltage.pdf}
+	\includegraphics [scale=0.7] {Dispersion in the estimation of the fundamental frequency of the voltage.pdf}
 	\caption{Дисперсия при оценке основной частоты напряжения.}
 	\label{img:Dispersion_in_the_estimation_of_the_fundamental_frequency_of_the_voltage}
 \end{figure}
-Поэтому в диссертационной работе был предложен новый метод -- Прямой корреляционный методом с использованием быстрых алгоритмов обработки сигналов (рисунок 	\ref{img:Diagram_GSA}). Данный метод отличается от интерполяционных методов тем, что метод более точен, так как использует большое количество математических операций с помощью быстрых алгоритмов обработки сигналов.
+
+Как видно из	\ref{img:Dispersion_in_the_estimation_of_the_fundamental_frequency_of_the_voltage} рассмотренные методы не позволяют находить эффективную несмещенную оценку параметров гармоник. Для нахождения таких оценок было предложено использование прямого корреляционного метода. Возникающие при этом вопросы вычисления эффективности алгоритмов рассмотрим в 3 главе.
 
 Нижняя граница Крамера-Рао является объективным показателем для
 определения границы дисперсии ошибки при оценке неизвестного параметра при
 использовании различных методов. Общая оценка границы Крамера-Рао для сигналов в белом Гауссовом шуме определяется:
 \begin{equation}
-	\label{eq:equation14}
+	\label{eq:equation5}
 	x[n] = A + s[n;\theta] + w[n], n=0,1,...,N-1	
 \end{equation}
 
@@ -189,7 +191,7 @@ $w[n]$ -- белый шум Гаусса;
 $s[n;\theta]$ -- детерминированный сигнал.
 
 \begin{equation}
-	\label{eq:equation14}
+	\label{eq:equation6}
 	var(\hat{\theta}) \geq \frac{\sigma^2}{\displaystyle\sum_{n=0}^{N-1} \left(\frac{\partial s [n; \theta]}{\partial\theta}\right)^2} 
 \end{equation}
 
@@ -197,21 +199,20 @@ $s[n;\theta]$ -- детерминированный сигнал.
 Для параметров гармоник сигнала неравенство Крамера-Рао выглядит следующим образом:
 %(3.41), C.34
 \begin{equation}
-\label{eq:equation16}
+\label{eq:equation7}
 var(\hat{A})\geq \frac{2  \sigma^2}{N}, var(\hat{\varphi})\geq \frac{2(2N-1)}{\eta N(N+1)}, var(\hat{f_0})\geq \frac{12}{(2\pi)^2 \eta  N(N^2 - 1)}    
 \end{equation}
 
 где $var(\hat{A})$ -- дисперсия амплитуды;
+$var(\hat{\varphi})$ -- дисперсия фазы гармоник; 
+$var(\hat{f_0})$ -- дисперсия частоты.
 
-$var(\hat{f_0})$ -- дисперсия частоты;
 
-$var(\hat{\varphi})$ -- дисперсия фазы гармоник.
-
-Формулы, которые представлены выше для нахождения границы Крамера-Рао не учитывают оконные функции. В диссертационной работе выведена формула, которая повышает точность измерений для нахождения границы Крамера-Рао с применением оконных функций.
+Экспериментальная проверка формулы 	\ref{eq:equation7} с помощью прямого корреляционного метода показала расхождением с теоретическими данными. Результаты прямым корреляционным методом имели более высокую дисперсию оценок. Была высказана гипотеза, что данная ошибка связана с тем, что граниица Крамера-Рао не учитывает влияние оконной функции. Для подтверждения этой гипотезы была выведена новая формула границы Крамера-Рао для амплитуды с учетом оконных функций.
  
-При наблюдении за дискретным сигналом, на который накладывается аддитивный белый гауссовский шум, формула (\ref{eq:equation1}) может быть записана в виде: 
+При наблюдении за дискретным сигналом, на который накладывается аддитивный белый гауссовский шум, формула \ref{eq:equation2} может быть записана в виде: 
 \begin{equation}
-	\label{eq:equation3}
+	\label{eq:equation8}
 	var(\theta)\geq\frac{\sigma^2}{\sum_{n=0}^{N-1}\left(\frac{\delta x(n;\theta)}{\delta\theta}\right)^2}
 \end{equation}
 
@@ -223,7 +224,7 @@ $x(n;\theta)$ -- наблюдаемый сигнал.
 
 В нашем случае наблюдаемый сигнал описывается следующей формулой:
 \begin{equation}
-	\label{eq:equation4}
+	\label{eq:equation9}
 	x_n=A\cos(2*\pi*f*n+\phi)+wgn_n, n\in0,…,n-1
 \end{equation}
 
@@ -238,14 +239,14 @@ $wgn$ -- белый гауссовский шум.
 Этот сигнал содержит три неизвестных параметра (амплитуду, частоту и фазу). Пренебрегая неопределенностью частоты и фазы получим следующую формулу для дисперсии оценки амплитуды гармоники в аддитивном белом гауссовском шуме: 
 
 \begin{equation}
-	\label{eq:equation5}
+	\label{eq:equation10}
 	I(A)=\sum_{n=0}^{N-1}\left( \frac{\delta x}{\delta A} \right)^2 =\frac{1}{\sigma^2} \sum_{n=0}^{N-1}\cos^2 (2*\pi*f*n+\phi)\approx \frac{N}{2\delta ^2 }
 \end{equation}
 
 После применения оконной функции сигнал будет записан в виде: 
 
 \begin{equation}
-	\label{eq:equation6}
+	\label{eq:equation11}
 	x_n^{'}= w_n*A\cos(2*\pi*f*n+\phi)+w_n*wgn_n,..n\in 0,…,n-1
 \end{equation}
 
@@ -253,39 +254,39 @@ $wgn$ -- белый гауссовский шум.
 
 Изменения дисперсии шума:
 \begin{equation}
-\label{eq:equation19}
+\label{eq:equation12}
 w g N_i = w_i \cdot w g N_i
 \end{equation}
 
 \begin{equation}
-	\label{eq:equation19}
+	\label{eq:equation13}
 {\sigma^2}' = (w_i \cdot w g N_i - 0)^2=(w_i \cdot w g N_i)^2 =\frac{\displaystyle\sum_{i=1}^{N-1} w_i^2}{N} \cdot \sigma^2
 \end{equation}
 
 Усредняя по всем $n$ получаем, что дисперсия случайной величины $w_n*wgn_n$ будет: 
 
 \begin{equation}
-	\label{eq:equation7}
+	\label{eq:equation14}
 	\sigma^{'2}=\frac{\sum_{n=0}^{N-1} w_n^2}{N}*\sigma^2
 \end{equation}
 
 Если величина $\alpha$, которую нужно оценить, связана с величиной $\theta$, для которой известна граница Крамера-Рао, соотношением $\alpha=g(\theta)$, то границу Крамера-Рао для величины $\alpha$ можно найти по формуле: 
 
 \begin{equation}
-	\label{eq:equation8}
+	\label{eq:equation15}
 	var(\theta)\geq \frac{\left(\frac{\delta^2 g}{\delta\theta}\right)}{-E\left[\frac{\delta^2 ln p(x;\theta)}{\delta \theta^2}\right]^{'}}
 \end{equation}
 
 Умножение сигнала на оконную функцию приводит к сворачиванию каждой гармоники сигнала со спектром оконной функции. В случае единственной гармоники ее амплитуда умножается на нулевую гармонику спектра оконной функции. Нулевая гармоника сигнала это постоянная составляющая, ее значение для оконной функции можно найти по формуле: 
 
 \begin{equation}
-	\label{eq:equation9}
+	\label{eq:equation16}
 	w_0= \frac{\sum_{n=0}^{N-1} w_n}{N}.	  
 \end{equation}
 
 Получаем, что: 
 \begin{equation}
-	\label{eq:equation10}
+	\label{eq:equation17}
 	A^{'}=\frac{A}{w_0} ,		  
 \end{equation}
 
@@ -297,7 +298,7 @@ $A^{'}$ -- амплитуда гармоники исходного сигнал
 
 Основное положение, которое выносится на защиту -- это дополнение математической модели многотонального сигнала, позволяющего определять дисперсию оценки амплитуды гармоники, отличающее от известной границы Крамера-Рао с учетом изменения дисперсии после применения оконных функций. Математическая модель для оценки точности нахождения амплитуды гармоники:
 \begin{equation}
-	\label{eq:equation24}
+	\label{eq:equation18}
 	var(A)\geq \frac{2\sigma^2}{N} \frac{\sum_{n=0}^{N-1}w_n^2}{\left(\sum_{n=0}^{N-1} w_n \right)^2} 			  
 \end{equation}
 
@@ -313,16 +314,16 @@ $A$ – амплитуда гармоники.
 
 Эта формула дает оценку дисперсии при использовании метода, вносящего оптимальную несмещенную оценку. В работе \cite{altman2020boundary} ввели новое обозначение коэффициент окна:
 \begin{equation}
-	\label{eq:equation25}
+	\label{eq:equation19}
 	F_{win}=\frac{\sum_{n=0}^{N-1}w_n^2}{\left(\sum_{n=0}^{N-1} w_n\right)^2}
 \end{equation}
 
 Данный коэффициент показывает, во сколько ухудшится оценка амплитуды гармоники при использовании окна $w$ (таблица \label{tbl:test2_1}).
 
-Эксперименты были проведены при различных входных параметрах (число точек, амплитуда, частота и фаза сигналов, дисперсия шума или коэффициент окна). Ни в одном случае не было зафиксировано отклонение результатов эксперимента от результатов, полученных по предложенной формуле. 
+Эксперименты для проверки полученных формул были проведены при различных входных параметрах (число точек, амплитуда, частота и фаза сигналов, дисперсия шума или коэффициент окна). Ни в одном случае не было зафиксировано отклонение результатов эксперимента от результатов, полученных по предложенной формуле. 
 
 Разработан комплекс программ на языке программирования Python: оценка дисперсии белого шума после наложения на него окна, оценка амплитуды при использовании разных окон, оценки амплитуды при различных уровнях шума.
-На графике \ref{img:noise_win_var} показано изменение дисперсии шума после наложении на него окна Кайзера с параметром $kaiser\_beta=5$, результаты расчета по формуле \ref{eq:equation7}. Из графика видно, что линии дисперсий практически совпадают:
+На рисунке \ref{img:noise_win_var} показано изменение дисперсии шума после наложении на него окна Кайзера, результаты расчета по формуле \ref{eq:equation7}. Из графика видно, что линии дисперсий практически совпадают:
 \begin{figure}[ht]
 	\centering
 	\includegraphics [scale=0.5] {noise_win_var.png}
@@ -330,7 +331,6 @@ $A$ – амплитуда гармоники.
 	\label{img:noise_win_var}
 \end{figure}
 
-Для рисунков \ref{img:estimate_amp_sin_kaiser_beta} и \ref{img:estimate_amp_sin_kaiser_noise} использовалась формула \label{eq:equation24}. 
 \begin{figure}[ht]
 	\centering
 	\includegraphics [scale=0.5] {estimate_amp_sin_kaiser_beta.png}
@@ -345,11 +345,8 @@ $A$ – амплитуда гармоники.
 	\label{img:estimate_amp_sin_kaiser_noise}
 \end{figure}
 
-Рассмотренили влияние различных оконных функций на границу Крамера-Рао амплитуды однотонального сигнала \cite{altman2020boundary}.
-Формула оценки дисперсии амплитуды \cite{altman2020boundary} дает наилучший результаты при выборе весовых функций: Кайзера ($\beta=4$), Хэмминга, Барлетта. Так как результаты расчетов по формуле и результаты моделирование близки к границе Крамера-Рао. Зависимость дисперсии оценки амплитуды от дисперсии шума показывают, что чем меньше коэффициент увеличения дисперсии, тем точнее результаты. Наихудший результат показало окно Кайзера с параметром $\beta=15$.
-
 Дальнейшие исследования влияния оконных функций на формулу для нахождения границы Крамера-Рао рассмотрены в статье \cite{altman2021boundary}.
-В статье изучили весовые функции: Кайзера, Барлетта, Ханна, Хэмминга, Блэкмана. Умножение сигнала на оконную функцию приводит сворачиванию каждой гармоники со спектром оконной функции. Дисперсии оценки увеличивается из-за наложения на исходный сигнал оконных функций. Результаты экспериментальных исследований показали, что в формуле для оценки дисперсии после наложения на него различных окон совпадают результаты моделирования и расчеты по формуле. Формула для оценки дисперсии амплитуды дает наилучший результат с весовыми функциями: Кайзера ($\beta=4$), Хэмминга, Барлетта.
+В статье изучили весовые функции: Кайзера, Барлетта, Ханна, Хэмминга, Блэкмана. Формула для оценки дисперсии амплитуды дает наилучший результат с весовыми функциями: Кайзера ($\beta=4$), Хэмминга, Барлетта. Совпадение дисперсий оценок прямого корреляционного метода и оценок полученных по формуле 	\ref{eq:equation19}
 \begin{table}[ht]%
 	\caption{Зависимость дисперсии оценки амплитуды от дисперсии шума.}
 	\label{tbl:test2_1}
@@ -397,23 +394,99 @@ $A$ – амплитуда гармоники.
 % Раздел <<Корреляция>>
 \end{itemize}
 
-\underline{\textbf{Третья глава}} посвящена исследованию численных методов для нахождение оптимальной несмещенной оценки параметров гармоник:
+\underline{\textbf{Третья глава}} посвящена исследованию численных методов для нахождение оптимальной несмещенной оценки параметров гармоник.
 
-На основании анализа, выполненного в предыдущем разделе, оценку
-гармонических составляющих сигнала лучше производить прямым корреляционным методом с использованием быстрых алгоритмов обработки сигналов (рисунок \ref{img:picture3.9.4}), так как он обеспечивает точность оценки параметров сигнала, близкую к нижней границе Крамера-Рао. Алгоритм поиска гармоник представлен на рисунке \ref{img:Diagram_GSA}:
+Оценка параметров гармоник прямым корреляционным методом подразумевает вычисление корреляций сигнала с гармоническим сигналом различной частоты. Расстоянием между частотам эталонных гармоник, а следовательно и количество вычисляемых корреляций, можно определить с помощью границы Крамера-Рао. Для определения числа гармоник и расстояния между ними в зависимости от сценария использования алгоритмов оценки параметров в работе был предложен следующий подход:
+\begin{equation}
+\label{eq:equation20}
+k_i=\frac{f_1}{f_{eps}}
+\end{equation} 
+
+${f_{eps}}$ -- заданная точность.
+
+\begin{equation}
+\label{eq:equation21}
+f_{eps}=a_{eps}*\frac{sw_0-w_1}{sw_0} 
+\end{equation} 
+
+$a_{eps}$ -- заданная точность;
+
+$sw_i$ -- отсчеты спектра окна.
+
+\begin{equation}
+\label{eq:equation22}
+a_{eps} = var(A)\geq \frac{2\sigma^2}{N}  \frac{\sum_{n=0}^{N-1}w_n^2}{\left(\sum_{n=0}^{N-1} w_n \right)^2}
+\end{equation} 
+
+Для вычислительно эффективного нахождения большого числа гармоник в нашем случае могут быть использованны следующие подходы:
+\begin{itemize}
+\item использование метода дополнения исходного сигнала нулями и быстрое нахождение сигнала с помощью специальных алгоритмов БПФ;
+
+\item предварительная оценка частоты гармоники с помощью быстрого преобразования Фурье и нахождения гармоник, находящихся между отчетами БПФ, с помощью интерполирования (с некоторой потерей в точности);
+
+\item предварительная оценка частоты гармоники с помощью быстрого преобразования Фурье и нахождения гармоник, находящихся между отчетами БПФ, с помощью быстрых методов вычисления корреляции;
+
+\item использование итерационного оптимизационного метода нахождения гармоник на основе чисел Фиббоначи;
+\item комбинации рассмотренных методов.
+\end{itemize}
+
+В диссертационной работе были проанализированны все эти подходы.
+
+Анализ литературных источников показал, что для нашей задачи могут использоваться такие специальные алгоритмы БПФ как разряженное БПФ (sparse FFT) и усеченное БПФ (pruned FFT) (в виду неоднозначности и путаницы в применямых в научных статьях на русском языке названий этих алгоритмов, далее везде будем указывать английские варианты терминов).
+
+Алгоритм Sparse FFT показал высокое быстродействие, его время работы было меньше, чем при использовании интерполяционных методов. Однако, он показал свою неработоспособность в сочетании с методом дополнения исходного сигнала. Анализ алгоритма показал, что эта проблема является принципиальной, посколько связана с основной идей этого алгоритма -- поиск наибольших гармоник.
+
+Применение алгоритмов БПФ началось после публикации работы Джеймса Кули (James Cooley) и Джона Тьюки (John Tukey) в $1965$ году. Для вычисления БПФ используют алгоритм Кули-Тьюки в котором умножаются поварачивающие множители и вычисляются строки БПФ.
+
+Рассмотрим матрицу с шириной столбцов $N$ и высотой столбцов $K$. Алгоритм Pruned FFT реализуется следующим способом: он не требует $1$-й стадии вычислений, cложность алгоритма составляет  $N \cdot \log(N) \cdot K$, сложность алгоритма растет линейно с ростом $K$.
+Наиболее распространенный случай, когда используется Pruned FFT, -- это свертки с нулевым заполнением, где примерно 50\% входных данных равны нулю (чтобы получить линейную свертку из циклической свертки на основе БПФ).
+
+\begin{center}
+$\longrightarrow N$	
+\end{center}
+\begin{equation}
+	\label{eq:equation23}
+	\downarrow K 
+	\begin{pmatrix}
+			X_{0} & X_{1} & \cdots & X_{n-1} \\
+			X_{N} & X_{n+1} & \cdots & X_{2n-1} \\
+			\vdots  & \vdots  & \ddots & \vdots  \\
+			X_{N(k-1)} & \cdots & \cdots & X_{N(k-1)} 
+		\end{pmatrix}
+		\Bigg \} {\text{НУЛИ}}
+\end{equation} 
+
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.5] {Diagram_GSA2.png}
-	\caption{ГСА алгоритма поиска гармоник.}
-	\label{img:Diagram_GSA}
+	\includegraphics [scale=0.5] {Pruned_FFT.pdf}
+	\caption{Исходный сигнал.}
+	\label{img:Pruned_FFT}
 \end{figure}
 
-На рисунке \ref{img:picture3.9.4} представлен спектр расширенного зашумленного сигнала. Предсложенный в диссертационной работе численный метод находит оптимальную несмещенную оценку амплитуды гармоник на основе корреляционного анализа, а так же с помощью его быстрой реализации на основе алгоритма разряженного БПФ (Spare FFT).
+Для уточнения частотной гармоники ДПФ и амплитудной гармоники используется корреляционный анализ:
+\begin{equation}
+	\label{eq:equation24}
+	j = 0, 1, \cdots M-1
+\end{equation}
+\begin{equation}
+	\label{eq:equation25}
+	f_j = \frac{\left| f_{max}- f_{max'} \right| }{M} + f_{max'}
+\end{equation}
+\begin{equation}
+	\label{eq:equation26}
+	A_j = 
+	\displaystyle\sum_{k=0}^{M-1} x(k) \cdot \exp \left( -f_j \cdot \frac{2 \pi k}{N}\right) 
+\end{equation}
+
+где $f_{max}$ -- частота гармоники ДПФ с наибольшей амплитудой;
+
+$f_{max}'$ -- частота гармоники ДПФ со 2 по величине амплитуде.
+
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.45] {Figure_2.png}
-	\caption{Спектр расширенного сигнала.}
-	\label{img:picture3.9.4}
+	\includegraphics [scale=0.7] {Using_correlation.pdf}
+	\caption{Использование корреляции.}
+	\label{img:Using_correlation}
 \end{figure}
 
 В результате анализа, произведенного в третьем разделе, можно сделать следующие выводы:
@@ -444,19 +517,31 @@ $A$ – амплитуда гармоники.
 В \underline{\textbf{четвертой главе}} приведено описание применения алгоритмов оценки параметров многотональных сигналов для анализа гармоник и интергармоник в электрических сетях на железнодорожном транспорте.
 
 Высшие гармониками, отрицательно влияет на работу силового электрооборудования. При несоответствии нормам коэффициента искажения синусоидальной формы кривой сигнала, возрастают суммарные потери электроэнергии, сокращается срок службы изоляции электрических машин и аппаратов, повышая аварийность в кабельных сетях, вызывая сбои в работе систем релейной защиты.
+
+На основании анализа, выполненного в предыдущем разделе, оценку
+гармонических составляющих сигнала лучше производить прямым корреляционным методом с использованием быстрых алгоритмов обработки сигналов, так как он обеспечивает точность оценки параметров сигнала, близкую к нижней границе Крамера-Рао. Алгоритм поиска гармоник представлен на рисунке \ref{img:Diagram_GSA}:
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {Diagram_GSA2.png}
+	\caption{ГСА алгоритма поиска гармоник.}
+	\label{img:Diagram_GSA}
+\end{figure}
  
 В результате анализа, произведенного в четвертом разделе, можно сделать следующие выводы:
 \begin{itemize}
-\item в современных стандартах по анализу спектра в электрических сетях большее внимание уделяется нахождению интергармонических составляющих. Поскольку интергармонические составляющие имеют малую энергию по отношению к другим гармоникам и шуму, к алгоритмам для нахождения параметров гармоник возрастают требования по точности определения амплитуды в условиях высокого шума;
+\item Методы, основанные на интерполировании смежных гармоник, позволяют достичь высокой точности, во многих случаях достаточной для практического применения, однако они не позволяют достичь точности оптимальной несмещенной оценки.
 
-\item в стандартах также указывается требования о нахождение всех гармоник по 40 включительно, что, вместе с требованием о нахождении интеграмоник приводит к большому числу анализируемых гармонических составляющих сигнала;
-% Раздел <<Понятие качества электрической энергии>>
+\item Можно выделить несколько подходов к построению алгоритмов на основе корреляционного анализа: использование метода дополнения исходного сигнала нулями и быстрое нахождение сигнала с помощью pruned FFT; предварительная оценка частоты гармоники с помощью быстрого преобразования Фурье и нахождения гармоник, находящихся между отчетами БПФ, с помощью быстрых методов вычисления корреляции и комбинация этих методов.
 
-\item исходя из требований стандарта и анализа свойств изученных алгоритмов для анализа спектра сигнала в силовых электрических сетях железнодорожного транспорта рекомендуется использование метода дополнения сигнала нулями с применением разряженного преобразования Фурье.
-% Не отражено
+\item Реализация итерационного оптимизационного метода нахождения гармоник на основе чисел Фиббоначи при небольшом числе обсчитываемых гармоник обеспечивает быстродействие, близкое к итерационным методам. 
 
-\item время расчета спектра реального сигнала этим методом на современном компьютере начального уровня составляет единицы секунд, что позволяет говорить о его приемлемом быстродействии для решения практических задач.
-% Не отражено
+\item Время расчета параметров гармоник многотонального сигнала с помощью техники дополнения нулями может быть существенно снижено за счет применения усеченного быстрого преобразования Фурье (pruned FFT).
+
+\item Реализация метода дополнение нулями сигнала при использовании усеченного преобразования Фурье имеет быстродействие менее чем на порядок худшее, чем итерационные и оптимизационные методы, при этом быстродействие не зависит от числа обсчитываемых гармоник. Также нужно отметить больший объем памяти, требуемый для этого метода, который при этом не является критичным для современных вычислительных устройств.
+
+\item Метод дополнения нулями может быть реализован с помощью усеченного преобразования Фурье (pruned FFT) либо с помощью быстрых методов вычисления корреляции. То, какая реализация будет вычислительно эффективней, зависит от соотношений числа точек в представлении сигнала, требуемой точности по частоте и количеству гармоник для которых определяются параметры. Выбор реализации в данном случае следует определять экспериментально.
+
+\item Производительности современной вычислительной техники в большинстве случаев оказывается достаточно для использования прямого корреляционного метода с применением быстрых вычислительных алгоритмов.
 \end{itemize}
 
 В \underline{\textbf{заключении}} приведены основные результаты работы, которые заключаются в следующем:
