--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -17,7 +17,7 @@
 
 Цифровой сигнал можно представить из аналогового методом дискретизации. Дискретизация сигнала может производиться по времени (выборка) и по величине сигнала (квантованием). Преобразование из аналогово сигнала в цифровой называют аналогово-цифровым преобразованием (АЦП). 
 
-Существуют сигналы имеющие более одной независимой переменной. Такие сигналы называют одномерными. Например, сигнал изображения. Сигналы имеющие две независимые переменные называют -- двумерными.
+Существуют сигналы имеющие более одной независимой переменной. Такие сигналы называют многомерными. Например, сигнал изображения. Сигналы имеющие две независимые переменные называют -- двумерными.
 Наиболее популярный способ сравнения таких сигналов – это их корреляция или свертка. Корреляция может быть вычислена по алгоритмам циклической свертки, для этого необходимо прочитать один из двух сигналов в обратном порядке. Класс быстрых методов вычисления корреляции состоит в ее разложении на более короткие корреляции. Z.~J.~Mou, Y.~Naito, Л.~Рабинер и другие исследователи предложили и описали эти алгоритмы в своих работах.
 % Mou Z. J., Duhamel P. Fast FIR filtering: algorithms and implementations //Signal Processing. – 1987. – Т. 13. – №. 4. – С. 377-384.
 
@@ -31,11 +31,11 @@
 Путем корректировки параметра $\beta$ мы можем выполнить настройку окна
 Кайзера.
 
-В основе всех методов оценки параметров гармоник многотональных сигналов лежат перечисленные выше базовые алгоритмы ЦОС. Параметры гармоник находятся по спектру сигнала, получаемого с помощью БПФ, который по сути представляет собой набор корреляций с различными гармониками. В следствии ограничения по времени обрабатываемого сигнала, все методы сталкиваются с эффектами, вызванными оконными функциями.
+В основе всех методов оценки параметров гармоник многотональных сигналов лежат перечисленные выше базовые алгоритмы ЦОС. Параметры гармоник находятся по спектру сигнала, получаемого с помощью БПФ, который по сути представляет собой набор корреляций с различными гармониками. В следствии ограничения по времени обрабатываемого сигнала все методы сталкиваются с эффектами вызванными оконными функциями.
 
 В диссертационной работе рассмотрены известны алгоритмы, описывающие способы оценки спектральных составляющих сигнала: интерполяционные методы, метод корреляционных функций, модернизированный метод корреляционных функций и метод рекомендованный в ГОСТ, прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов. 
 
-Значительный вклад в решение вопросов по измерению оценки параметров гармоник внесли Российские и зарубежные ученые: 
+Значительный вклад в решение вопросов по оценке параметров гармоник внесли Российские и зарубежные ученые: 
 В.~Н.~Горюнов, 
 % Горюнов В. Н., Осипов Д. С., Лютаревич А. Г. Определение управляющего воздействия активного фильтра гармоник //Электро. Электротехника, электроэнергетика, электротехническая промышленность. – 2009. – №. 6. – С. 20-24.
 % Лютаревич, А. Г.; Горюнов, В. Н.; Долингер, С. Ю. & Хацевич, К. В. Вопросы моделирования устройств обеспечения качества электрической энергии. Омский научный вестник, Федеральное государственное бюджетное образовательное учреждение высшего ..., 2013
