synopsis and presentation

--- a/common/concl.tex
+++ b/common/concl.tex
@@ -1,6 +1,11 @@
 %% Согласно ГОСТ Р 7.0.11-2011:
 %% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
+В результате проведенных исследований получены новые научные результаты и технические решения и разработки, направленные на повышение достоверности, точности и эффективности работы алгоритмов оценивания параметров гармоник.
+
+Их применение позволит обеспечить высокое качество разработки контрольно-измерительных приборов для электрических сетей, а также может быть использованы при создании устройств приема информации для радиосигналов и других систем обработки сигналов.
+
+Основные научные и практические результаты диссертационной работы состоят в следующем:
 \begin{enumerate}
   \item Произвели обзор методов: интерпорилрование спектра (метод Якобсена, два метода Квина, два метода Маклеода, метод Грэндка, алгоритм параболической интерполяции, алгоритм интерполяции Гаусса), алгоритм, рекомендованный в ГОСТ $30804.4.7-2013$, метод корреляционныход  функций, Модернизированный метод корреляционных функций, алгоритм вычисления одномерной корреляции, алгоритм вычисления двумерной корреляции, алгоритм дискретного преобразования Фурье (ДПФ), алгоритма быстрого преобразования Фурье (БПФ), алгоритм разряженного преобразования Фурье (Spare FFT). 
   \item Выведена формула для нахождения границы Крамера-Рао при применении оконной функции, которая позволяет повысить эффективность научных исследований различных алгоритмов обработки сигналов с применением оконных функций, заменив моделирование алгоритма с применением различных окон расчетом по предложенной формуле.
@@ -8,4 +13,4 @@
   \item Разработанный комплекс программ позволяет проводить научные исследования в области цифровой обработки сигналов и используется в учебном процессе: программа прямого корреляционного метода с использование быстрых алгоритмов обработки сигналов, оценка дисперсии белого шума после наложения на него окна, оценка амплитуды при использовании различных окон, оценка амплитуды при различныз уровнях шума, алгоритм вычисления одномерной свертки.
 \end{enumerate}
 
-В заключение автор выражает благодарность и большую признательность научному руководителю Альтману~Е.\:А. за поддержку, помощь, обсуждение результатов и~научное руководство. Также автор благодарит заведующего кафедрой <<Автоматика и системы управления>> Малютина~А.\:Г. и старшего преподавателя Александрова~А.\:В.
+В качестве рекомендаций дальнейшей разработки темы диссертации в части построения математических моделей систем приема и измерения сигналов предлагается распространить подход к определению границы Крамера-Рао для других алгоритмов цифровой обработки сигналов. Перспективным также является изучение и применение разработанных численных методов для оценки гармонических сигналов другого типа, отличного от сигналов в электрической сети.
