--- a/common/newnames.tex
+++ b/common/newnames.tex
@@ -41,6 +41,7 @@
 \newcommand{\bibtitleauthorwos}{В изданиях, входящих в международную базу цитирования Web of Science}
 \newcommand{\bibtitleauthorother}{В прочих изданиях}
 \newcommand{\bibtitleauthorconf}{В сборниках трудов конференций}
+\newcommand{\bibtitlenir}{отчет НИР}
 
 % для стиля библиографии `\insertbiblioauthorimportant`:
 \newcommand{\bibtitleauthorimportant}{Наиболее значимые \protect\MakeLowercase\bibtitleauthor}
