--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,5 +1,20 @@
 {\actuality} 
-Диссертационная работа посвящена совершенствованию математической модели многотонального сигнала и численных методов оценки параметров его гармоник. 
+Диссертационная работа посвящена совершенствованию математической модели многотонального сигнала и численных методов оценки параметров его гармоник.
+
+Гармоническеская природа сигналов является прямым следствием линейности основных законов физики, описывающих взаимодействие объектов. Поэтому потребность в оценке параметров гармоник сигналов встречается во многих областях науки и техники. В частности, отправной точкой для исследования методов оценивания параметров гармоник в данной работе является применение этих алгоритмов для измерения сигналов в электрических сетях, что является важным средством для контроля и повышения эффективности их работы.
+
+Анализ имеющихся алгоритмов показал, что имеются работающие и достаточно эффективные алгоритмы, позволяющие с достаточной точностью оценивать параметры основных гармоник сигналов в электрических сетях, находить несущие частоты в радиотехнике и решать другие задачи. Вместе с тем эти алгоритмы находят приближенную оценку параметров, а результаты экспериментов показывают, что их точность не достигает теоретической границы.
+
+Возрастающие требования к точности оценивания параметров гармоник (например, при оценивании интергармоник) с одной стороны, и увеличивающиеся возможности вычислительной техники с другой, делают актуальной тему исследования и разработки более точных алгоритмов для рассматриваемеой задачи.
+
+Диссертационная работа выполнена в соответствии с планом научно-технических работ Омского государственного университета путей сообщения (тема НИР № АААА-А18-118051190083-5 <<Моделирование и разработка численных методов и программных систем обработки и
+передачи информации>>(2018, 2019, 2020) и тема НИР № 0120.0.961584 <<Разработка и исследование методов и систем управления,
+обработки и передачи информации>> (2019)).
+
+{\progress}
+При оценивании параметров гармоник используются математическе основы и алгоритмы из нескольких областей цифровой обработки сигналов.
+
+Преобразование Фурье (Fourier transform) уводит нас из временной области в частотную, и это влечет за собой огромное количество применений. 
 
 Основным направлением в применении цифровой обработки сигналов (ЦОС) является спектральный анализ. Каждый сигнал, который изменяется во времени, имеет частотный спектр. Электрические сигналы можно анализировать в частотной области с помощью анализаторов спектра, во временной области с помощью осциллографов. 
 
@@ -17,7 +32,7 @@
 
 Цифровой сигнал можно представить из аналогового методом дискретизации. Дискретизация сигнала может производиться по времени (выборка) и по величине сигнала (квантованием). Преобразование из аналогово сигнала в цифровой называют аналогово-цифровым преобразованием (АЦП). 
 
-Существуют сигналы имеющие более одной независимой переменной. Такие сигналы называют многомерными. Например, сигнал изображения. Сигналы имеющие две независимые переменные называют -- двумерными.
+Существуют сигналы, имеющие более одной независимой переменной. Такие сигналы называют многомерными. Например, сигнал изображения. Сигналы, имеющие две независимые переменные, называют -- двумерными.
 Наиболее популярный способ сравнения таких сигналов – это их корреляция или свертка. Корреляция может быть вычислена по алгоритмам циклической свертки, для этого необходимо прочитать один из двух сигналов в обратном порядке. Класс быстрых методов вычисления корреляции состоит в ее разложении на более короткие корреляции. Z.~J.~Mou, Y.~Naito, Л.~Рабинер и другие исследователи предложили и описали эти алгоритмы в своих работах.
 % Mou Z. J., Duhamel P. Fast FIR filtering: algorithms and implementations //Signal Processing. – 1987. – Т. 13. – №. 4. – С. 377-384.
 
@@ -25,7 +40,7 @@
 
 %Рабинер Л., Гоулд Б. Теория и применение цифровой обработки сигналов. – Рипол Классик, 1978.
 
-Совокупность амплитуд гармоник ряда Фурье часто называют амплитудным спектром, а совокупность фаз -- фазовым спектром. Спектр амплитуд показывает как велика составляющая каждой гармоники внутри сигнала. Гармонический сигнал определяется тремя числовыми параметрами: амплитудой, частотой и фазой. Колебания самого большого периода называют колебанием основной частоты или колебанием первой гармоники. Первая гармоника является периодической функцией с периодом $2 \pi$. Ряд Фурье четной функции содержит только косинусы. Ряд Фурье нечетной функции содержит синусы.
+Совокупность амплитуд гармоник ряда Фурье часто называют амплитудным спектром, а совокупность фаз -- фазовым спектром. Спектр амплитуд показывает, как велика составляющая каждой гармоники внутри сигнала. Гармонический сигнал определяется тремя числовыми параметрами: амплитудой, частотой и фазой. Колебания самого большого периода называют колебанием основной частоты или колебанием первой гармоники. Первая гармоника является периодической функцией с периодом $2 \pi$. Ряд Фурье четной функции содержит только косинусы. Ряд Фурье нечетной функции содержит синусы.
 
 В ЦОС оконные функции широко используются для ограничения сигнала во времени. Классические оконные функции включают функции: Ханна, Хемминга, Блэкмана, Кайзера и другие. Оконная функция Кайзера – хорошая аппроксимация оптимального вытянутого сферического окна, концентрирующего большинство энергии в главном лепестке.
 Путем корректировки параметра $\beta$ мы можем выполнить настройку окна
@@ -33,7 +48,7 @@
 
 В основе всех методов оценки параметров гармоник многотональных сигналов лежат перечисленные выше базовые алгоритмы ЦОС. Параметры гармоник находятся по спектру сигнала, получаемого с помощью БПФ, который по сути представляет собой набор корреляций с различными гармониками. В следствии ограничения по времени обрабатываемого сигнала все методы сталкиваются с эффектами вызванными оконными функциями.
 
-В диссертационной работе рассмотрены известны алгоритмы, описывающие способы оценки спектральных составляющих сигнала: интерполяционные методы, метод корреляционных функций, модернизированный метод корреляционных функций и метод рекомендованный в ГОСТ, прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов. 
+В диссертационной работе рассмотрены известны алгоритмы, описывающие способы оценки спектральных составляющих сигнала: интерполяционные методы, метод корреляционных функций, модернизированный метод корреляционных функций и метод, рекомендованный в ГОСТ, прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов. 
 
 Значительный вклад в решение вопросов по оценке параметров гармоник внесли Российские и зарубежные ученые: 
 В.~Н.~Горюнов, 
@@ -116,16 +131,16 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
 	\item Разработанный комплекс программ позволяет проводить научные исследования в области цифровой обработки сигналов и используется в учебном процессе.
 \end{enumerate}
 
-На основании теоретических и экспериментальных исследований разработан и зарегистрирована программа, написанная на языке программирования Python, позволяющая решать задачи спектрального анализа напряжений в электроэнергетической системе, а так же оценивать параметры гармоник многотонального сигнала.
+На основании теоретических и экспериментальных исследований разработан и зарегистрирована программа, написанная на языке программирования Python, позволяющая решать задачи спектрального анализа напряжений в электроэнергетической системе, а также оценивать параметры гармоник многотонального сигнала.
 
 
 {\methods} 
-Исследование состоит в итерационном изучении объекта исследования с попеременным уточнением его модели с точки зрения математического описания и с точки зрения его программной реализации. При этом использовались методы исследования основанные на математическом анализе и математической статистики с одной стороны и методы численного моделирования с использованием платформы SciPy для языка программирования Python с другой.
+Исследование состоит в итерационном изучении объекта исследования с попеременным уточнением его модели с точки зрения математического описания и с точки зрения его программной реализации. При этом использовались методы исследования, основанные на математическом анализе и математической статистики с одной стороны и методы численного моделирования с использованием платформы SciPy для языка программирования Python с другой.
 
 % Второй вариант методов
 %Для решения поставленных задач в диссертационной работе использовались методы математического анализа и теории вероятностей, численные методы. Исследования алгоритмов осуществлялось на ЭВМ с помощью языков программирования Python и С. 
 
-
+\newpage
 {\defpositions}
 \begin{enumerate}
   \item Дополнение к математической модели многотонального сигнала в виде формулы, позволяющей определить дисперсию оценки амплитуды гармоники, отличающемуся от известной границы Крамера-Рао учетом изменения дисперсии после применения оконных функций.
@@ -146,43 +161,8 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
 %полученных результатов обеспечивается теоретически и на практике при проведении эксперимента, подтверждена исследованиями на ЭВМ, написано на языке программирования Python, в среде IDE JetBrains PyCharm Community Edition 2018.3.1 x64.  
 
 {\probation}
-Основные результаты работы докладывались~на:
-
-\begin{enumerate}
-
-\item Научная конференция, посвященная Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2016) \cite{detectors_local2016}.	
-
-\item  Всероссийская научно-практическая конференция <<Информационно-телекоммуникационная системы и технологии>>
-(Кемерово, 2016) \cite{boundary_recognition2017}.
-
-\item XI научная конференция, посвященной Дню российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2017) \cite{innovative_projects2017}
-
-\item V Всероссийская научно-техническая конференция с международным участием <<Технологическое обеспечение ремонта и повышение динамических качеств железнодорожного подвижного состава>> (Омск, 2017)  \cite{implementation_of_algorithms2017}
-
-\item II Международная научно-практическая конференция  <<САПР и моделирование в современной электронике>> (Брянск, 2018)  \cite{information-measuring2018}
-
-\item XIX Всероссийская конференция молодых ученых по математическому моделированию и информационным технологиям <<Тезисы XIX всероссийской конференции молодых ученых  по математическому моделированию и информационным технологиям>> (Кемерово, 2018)  \cite{efficiency_mark2018}.
-
-\item II Всероссийская научно-техническая конференция с международным участием <<Информационные и управляющие системы на транспорте и в промышленности>> (Омск, 2018) \cite{accuracy_study2018}.
-
-\item Научная конференция, посвященная Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2018) \cite{depth_expansion2018}.
-
-\item XXI Вcероссийская научно-техническая конференция <<Современные проблемы радоэлектроники>> (Красноярск, 2018) \cite{application_of_fast2018}.
-
-\item III Международная научно-техническая конференция <<Проблемы машиноведения>> (Омск, 2019) \cite{cache_oriented2019}.
-
-\item I Всероссийская научно-практическая конференция с международным участием <<Системы управления, информационные технологии и математическое моделирование>> (Омск, 2019) \cite{comparative_analysis_2019}.
-
-\item Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2019) \cite{comparative_analysis2019}.
-
-\item Материалы всероссийской научно-технической конференции <<Надежность функционирования и информационная безопасность инфокоммуникационных, телекоммуникационных и радиотехнических сетей и систем>> (Омск, 2019) \cite{modern_information2019}. 
-
-\item III Международная научно-практическая конференция <<Инновации в информационных технологиях, машиностроении и автотранспорте>> \cite{complexity_assessment2019}.
-
-\item Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2020) \cite{comparative_study2020}.  
-
-\item Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2021) \cite{altman2021boundary}
-\end{enumerate}
+Результаты работы отражались в научных докладах, которые представлялись на Научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2016)~\cite{detectors_local2016}, Всероссийской научно-практической конференции <<Информационно-телекоммуникационная системы и технологии>>
+(Кемерово, 2016)~\cite{boundary_recognition2017}, XI Научной конференции, посвященной Дню российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2017)~\cite{innovative_projects2017}, V Всероссийской научно-технической конференции с международным участием <<Технологическое обеспечение ремонта и повышение динамических качеств железнодорожного подвижного состава>> (Омск, 2017)~\cite{implementation_of_algorithms2017}, II Международной научно-практической конференции  <<САПР и моделирование в современной электронике>> (Брянск, 2018)~\cite{information-measuring2018}, XIX Всероссийской конференции молодых ученых по математическому моделированию и информационным технологиям <<Тезисы XIX всероссийской конференции молодых ученых  по математическому моделированию и информационным технологиям>> (Кемерово, 2018)~\cite{efficiency_mark2018}, II Всероссийской научно-техническая конференция с международным участием <<Информационные и управляющие системы на транспорте и в промышленности>> (Омск, 2018)~\cite{accuracy_study2018}, Научная конференция, посвященная Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2018)~\cite{depth_expansion2018}, XXI Вcероссийская научно-техническая конференция <<Современные проблемы радоэлектроники>> (Красноярск, 2018)~\cite{application_of_fast2018}, III Международная научно-техническая конференция <<Проблемы машиноведения>> (Омск, 2019)~\cite{cache_oriented2019}, I Всероссийская научно-практическая конференция с международным участием <<Системы управления, информационные технологии и математическое моделирование>> (Омск, 2019)~\cite{comparative_analysis_2019}, Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2019)~\cite{comparative_analysis2019}, Материалы всероссийской научно-технической конференции <<Надежность функционирования и информационная безопасность инфокоммуникационных, телекоммуникационных и радиотехнических сетей и систем>> (Омск, 2019)~\cite{modern_information2019}, III Международная научно-практическая конференция <<Инновации в информационных технологиях, машиностроении и автотранспорте>>~(Кемерово, 2019)\cite{complexity_assessment2019}, Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2020)~\cite{comparative_study2020}, Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2021)~\cite{altman2021boundary}.
 %{\contribution} Автор принимал активное участие \ldots
 
 \ifnumequal{\value{bibliosel}}{0}
@@ -218,8 +198,12 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
             , \arabic{citeauthorscopuswos} "--- в~периодических научных журналах, индексируемых Web of~Science и Scopus\sloppy%
         \fi%
         \ifnum \value{citeauthorconf}>0%
-            , \arabic{citeauthorconf} "--- в~тезисах докладов.
-        \else%
+            , \arabic{citeauthorconf} "--- в~тезисах докладов, 
+            %\arabic{citenir} "--- отчета НИР.
+            $4$ отчетах НИР и $1$ свидетельстве о регистрации программы для ЭВМ, $1$ "--- в~изданиях РИНЦ.
+% Разобраться, чтобы отчеты НИР учитывались в счетчике            
+        
+\else%
             .
         \fi
     \end{refsection}%
@@ -249,7 +233,6 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
     }{}
     \fi
 }
-
 %При использовании пакета \verb!biblatex! будут подсчитаны все работы, добавленные
 %в файл \verb!biblio/author.bib!. Для правильного подсчёта работ в~различных
 %системах цитирования требуется использовать поля:
