--- a/common/data.tex
+++ b/common/data.tex
@@ -65,20 +65,20 @@
 \newcommand{\opponentOneFio}           % Оппонент 1, ФИО
 {\todo{Фамилия Имя Отчество}}
 \newcommand{\opponentOneRegalia}       % Оппонент 1, регалии
-{\todo{доктор физико-математических наук, профессор}}
+{\todo{XXX, XXX}}
 \newcommand{\opponentOneJobPlace}      % Оппонент 1, место работы
-{\todo{Не очень длинное название для места работы}}
+{\todo{XXX}}
 \newcommand{\opponentOneJobPost}       % Оппонент 1, должность
-{\todo{старший научный сотрудник}}
+{\todo{XXX}}
 
 \newcommand{\opponentTwoFio}           % Оппонент 2, ФИО
 {\todo{Фамилия Имя Отчество}}
 \newcommand{\opponentTwoRegalia}       % Оппонент 2, регалии
-{\todo{кандидат физико-математических наук}}
+{\todo{XXX}}
 \newcommand{\opponentTwoJobPlace}      % Оппонент 2, место работы
-{\todo{Основное место работы c длинным длинным длинным длинным названием}}
+{\todo{XXX}}
 \newcommand{\opponentTwoJobPost}       % Оппонент 2, должность
-{\todo{старший научный сотрудник}}
+{\todo{XXX}}
 
 %% \newcommand{\opponentThreeFio}         % Оппонент 3, ФИО
 %% {\todo{Фамилия Имя Отчество}}
@@ -93,7 +93,8 @@
 {\todo{Омский научно-исследовательский институт приборостроения (АО «ОНИИП»)}}
 
 \newcommand{\defenseDate}              % Защита, дата
-{\todo{18 декабря 2021~г.~в~15 часов}}
+%{\todo{18 декабря 2021~г.~в~15 часов}}
+{\todo{XX месяц 20XX~г.~в~ XX часов}}
 \newcommand{\defenseCouncilNumber}     % Защита, номер диссертационного совета
 {\todo{Д\,212.178.15}}				   %05.13.18 – Математическое моделирование, численные методы и комплексы программ (технические науки).
 \newcommand{\defenseCouncilTitle}      % Защита, учреждение диссертационного совета
@@ -101,19 +102,26 @@
 \newcommand{\defenseCouncilAddress}    % Защита, адрес учреждение диссертационного совета
 {\todo{г.~Омск, проспект~Мира, 11}}
 \newcommand{\defenseCouncilPhone}      % Телефон для справок
-{\todo{+7~(3812)~65-64-92}}
+%{\todo{+7~(3812)~65-64-92}}
+{\todo{+X~(XXXX)~XX-XX-XX}}
 \newcommand{\defenseCouncilmail}    
- {\todo{E-mail:~dissov\_omgtu@omgtu.ru}}                      %e-mail
+%{\todo{E-mail:~dissov\_omgtu@omgtu.ru}}                      %e-mail
+{\todo{E-mail:~XXX}}                      %e-mail
+
+
 
 \newcommand{\defenseSecretaryFio}      % Секретарь диссертационного совета, ФИО
-{\todo{Варепо Лариса Григорьевна}}
+%{\todo{Варепо Лариса Григорьевна}}
+{\todo{Фамилия Имя Отчество}}
+
 \newcommand{\defenseSecretaryRegalia}  % Секретарь диссертационного совета, регалии
-{\todo{доктор технических наук, доцент}}            % Для сокращений есть ГОСТы, например: ГОСТ Р 7.0.12-2011 + http://base.garant.ru/179724/#block_30000
+%{\todo{доктор технических наук, доцент}}            % Для сокращений есть ГОСТы, например: ГОСТ Р 7.0.12-2011 + http://base.garant.ru/179724/#block_30000
+{\todo{XXX, XXX}}
 
 \newcommand{\synopsisLibrary}          % Автореферат, название библиотеки
-{\todo{Омского государственного технического университета}}
+{\todo{Омского государственного технического университета }}
 \newcommand{\synopsisDate}             % Автореферат, дата рассылки
-{\todo{23 июля 2021 года}}
+{\todo{XX месяц 20XX года}}
 
 % To avoid conflict with beamer class use \providecommand
 \providecommand{\keywords}%            % Ключевые слова для метаданных PDF диссертации и автореферата
